feat(source): include LSTM analysis and functions used
Signed-off-by: Matheus <matheuscerqueira042@gmail.com>

--- a/sst_lstm.ipynb
+++ b/sst_lstm.ipynb
@@ -451,6 +451,172 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b = SSTHelper.split_train_test(dataset, '2022-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sst</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-02-01</th>\n",
+       "      <td>-0.031850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-01</th>\n",
+       "      <td>-0.089225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-01</th>\n",
+       "      <td>-0.136101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-05-01</th>\n",
+       "      <td>-0.136691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-06-01</th>\n",
+       "      <td>0.057357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-01</th>\n",
+       "      <td>0.170479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-01</th>\n",
+       "      <td>0.406533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-01</th>\n",
+       "      <td>0.572076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-01</th>\n",
+       "      <td>0.581357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-01</th>\n",
+       "      <td>0.312524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12-01</th>\n",
+       "      <td>0.163466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-01</th>\n",
+       "      <td>0.033613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-02-01</th>\n",
+       "      <td>-0.146667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-01</th>\n",
+       "      <td>-0.141187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-01</th>\n",
+       "      <td>-0.189331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-05-01</th>\n",
+       "      <td>-0.119288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-01</th>\n",
+       "      <td>-0.001668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-01</th>\n",
+       "      <td>0.082491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-01</th>\n",
+       "      <td>0.339321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-09-01</th>\n",
+       "      <td>0.530759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-10-01</th>\n",
+       "      <td>0.561228</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 sst\n",
+       "time                \n",
+       "2022-02-01 -0.031850\n",
+       "2022-03-01 -0.089225\n",
+       "2022-04-01 -0.136101\n",
+       "2022-05-01 -0.136691\n",
+       "2022-06-01  0.057357\n",
+       "2022-07-01  0.170479\n",
+       "2022-08-01  0.406533\n",
+       "2022-09-01  0.572076\n",
+       "2022-10-01  0.581357\n",
+       "2022-11-01  0.312524\n",
+       "2022-12-01  0.163466\n",
+       "2023-01-01  0.033613\n",
+       "2023-02-01 -0.146667\n",
+       "2023-03-01 -0.141187\n",
+       "2023-04-01 -0.189331\n",
+       "2023-05-01 -0.119288\n",
+       "2023-06-01 -0.001668\n",
+       "2023-07-01  0.082491\n",
+       "2023-08-01  0.339321\n",
+       "2023-09-01  0.530759\n",
+       "2023-10-01  0.561228"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
