--- a/source/4_svr.ipynb
+++ b/source/4_svr.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,9 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing the dtw module. When using in academic works please cite:\n",
+      "  T. Giorgino. Computing and Visualizing Dynamic Time Warping Alignments in R: The dtw Package.\n",
+      "  J. Stat. Soft., doi:10.18637/jss.v031.i07.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import netCDF4 as nc\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,6 +645,115 @@
    ],
    "source": [
     "pipeline3.plot_predict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Teste Expandido\n",
+    "Nessa seçao iremos expandir a quantidade de testes, executando o SARIMA para cerca de 100 séries temporais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lendo os pontos pré-definidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_list_points(filename):\n",
+    "    list_points = []\n",
+    "    with open(filename, 'r') as file:\n",
+    "        for line in file:\n",
+    "            line_split = line.split(',')\n",
+    "            try:\n",
+    "                list_points.append((int(line_split[1]), int(line_split[2])))\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "    return list_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_points = read_list_points('../dados/pontos.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Rodando o SARIMA e calculando o erro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from netuno import DSPipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/100 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 82%|████████▏ | 82/100 [04:56<01:00,  3.38s/it]/home/vitor/Documents/sst-time-series-ml/source/netuno/sst_helper.py:108: RuntimeWarning: divide by zero encountered in divide\n",
+      "  X_std = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
+      "/home/vitor/Documents/sst-time-series-ml/source/netuno/sst_helper.py:108: RuntimeWarning: invalid value encountered in divide\n",
+      "  X_std = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
+      " 83%|████████▎ | 83/100 [04:59<00:53,  3.17s/it]/home/vitor/Documents/sst-time-series-ml/source/netuno/sst_helper.py:108: RuntimeWarning: divide by zero encountered in divide\n",
+      "  X_std = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
+      "/home/vitor/Documents/sst-time-series-ml/source/netuno/sst_helper.py:108: RuntimeWarning: invalid value encountered in divide\n",
+      "  X_std = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
+      "100%|██████████| 100/100 [05:58<00:00,  3.58s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "error_list = []\n",
+    "\n",
+    "for point_coordinates in tqdm(list_points):\n",
+    "    try:\n",
+    "        point_pipeline = DSPipeline(df, point_coordinates[0], point_coordinates[1], split_date, forecast_horizon=12)\n",
+    "        rmse = point_pipeline.make_pipeline(1.0, 0.3)\n",
+    "        mape = point_pipeline.evaluate_mape()\n",
+    "        error_list.append((rmse, mape))\n",
+    "    except:\n",
+    "        print(f'lat: {point_coordinates[0]}; lon:{point_coordinates[1]}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df = pd.DataFrame(error_list)\n",
+    "results_df.rename({0: 'rmse', 1: 'mape'}, axis=1).to_csv('../dados/svr_results.csv')   "
    ]
   },
   {
