--- a/source/4_svr.ipynb
+++ b/source/4_svr.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,56 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing\n",
-      "Lat: -22, Lon: -72\n",
-      "[0.63670594 0.62641585 0.73441344 ... 0.32512861 0.33221498 0.35176736]\n",
-      "[ 0.27341187  0.2528317   0.4688269  ... -0.34974277 -0.33557004\n",
-      " -0.29646528]\n",
-      "Total length: 2038\n",
-      "1968 22\n",
-      "Train/test proportion: 0.9656526005888125/0.010794896957801767\n",
-      "Initializing\n",
-      "Lat: 36, Lon: 18\n",
-      "[0.22251053 0.19118312 0.1807629  ... 0.8891512  0.8264598  0.74953777]\n",
-      "[-0.55497897 -0.61763376 -0.6384742  ...  0.77830243  0.65291965\n",
-      "  0.49907553]\n",
-      "Total length: 2038\n",
-      "1968 22\n",
-      "Train/test proportion: 0.9656526005888125/0.010794896957801767\n",
-      "Initializing\n",
-      "Lat: 0, Lon: -2\n",
-      "[0.52938354 0.5255629  0.75756633 ... 0.40840217 0.48857298 0.575799  ]\n",
-      "[ 0.05876708  0.05112576  0.51513267 ... -0.18319565 -0.02285403\n",
-      "  0.15159798]\n",
-      "Total length: 2038\n",
-      "1968 22\n",
-      "Train/test proportion: 0.9656526005888125/0.010794896957801767\n",
-      "Initializing\n",
-      "Lat: 20, Lon: -132\n",
-      "[0.45452294 0.4209034  0.44970146 ... 0.66966057 0.7653795  0.7806142 ]\n",
-      "[-0.09095412 -0.15819317 -0.10059708 ...  0.33932114  0.530759\n",
-      "  0.5612284 ]\n",
-      "Total length: 2038\n",
-      "1968 22\n",
-      "Train/test proportion: 0.9656526005888125/0.010794896957801767\n",
-      "Initializing\n",
-      "Lat: -56, Lon: 80\n",
-      "[0.67455363 0.79580027 0.80168074 ... 0.36432543 0.30134213 0.32530108]\n",
-      "[ 0.34910727  0.59160054  0.6033615  ... -0.27134913 -0.39731574\n",
-      " -0.34939784]\n",
-      "Total length: 2038\n",
-      "1968 22\n",
-      "Train/test proportion: 0.9656526005888125/0.010794896957801767\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "split_date = '2021-12-01'\n",
     "\n",
@@ -504,14 +457,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1729 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1729/1729 [00:04<00:00, 369.58it/s]\n"
+      "  0%|          | 0/1729 [00:00<?, ?it/s]100%|██████████| 1729/1729 [00:04<00:00, 369.58it/s]\n"
      ]
     },
     {
@@ -664,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,29 +653,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 82%|████████▏ | 82/100 [04:56<01:00,  3.38s/it]/home/vitor/Documents/sst-time-series-ml/source/netuno/sst_helper.py:108: RuntimeWarning: divide by zero encountered in divide\n",
+      " 52%|█████▏    | 52/100 [01:08<01:01,  1.28s/it]C:\\Users\\Maiser\\Desktop\\git\\sst-time-series-ml\\source\\netuno\\sst_helper.py:108: RuntimeWarning: divide by zero encountered in divide\n",
       "  X_std = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
-      "/home/vitor/Documents/sst-time-series-ml/source/netuno/sst_helper.py:108: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\Maiser\\Desktop\\git\\sst-time-series-ml\\source\\netuno\\sst_helper.py:108: RuntimeWarning: invalid value encountered in divide\n",
       "  X_std = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
-      " 83%|████████▎ | 83/100 [04:59<00:53,  3.17s/it]/home/vitor/Documents/sst-time-series-ml/source/netuno/sst_helper.py:108: RuntimeWarning: divide by zero encountered in divide\n",
+      " 91%|█████████ | 91/100 [01:59<00:11,  1.30s/it]C:\\Users\\Maiser\\Desktop\\git\\sst-time-series-ml\\source\\netuno\\sst_helper.py:108: RuntimeWarning: divide by zero encountered in divide\n",
       "  X_std = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
-      "/home/vitor/Documents/sst-time-series-ml/source/netuno/sst_helper.py:108: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\Maiser\\Desktop\\git\\sst-time-series-ml\\source\\netuno\\sst_helper.py:108: RuntimeWarning: invalid value encountered in divide\n",
       "  X_std = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
-      "100%|██████████| 100/100 [05:58<00:00,  3.58s/it]\n"
+      "100%|██████████| 100/100 [02:10<00:00,  1.31s/it]\n"
      ]
     }
    ],
@@ -748,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +705,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -780,9 +719,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.18"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
